--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "st-webpack",
+  "name": "wp__stud",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -22,5 +22,8 @@
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "jquery": "^3.5.1"
   }
 }
